--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "template"
   ],
   "scripts": {
-    "test": "ava"
+    "test": "jest test.js --env=node"
   },
   "dependencies": {
     "superb": "^1.3.0"
   },
   "devDependencies": {
-    "ava": "^0.21.0",
+    "jest": "^23.6.0",
     "sao": "^0.22.1"
   }
 }
