--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -21,7 +21,7 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "exclude": [
-    "node_modules"
+  "include": [
+    "src"
   ]
 }
