--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "jest": "^23.6.0",
-    "sao": "^0.22.1",
+    "sao": "^1.3.2",
     "semantic-release": "^15.10.6"
-  }
+  },
+  "dependencies": {}
 }
